== Documentation plugin by itthinx - changelog.txt ==

= 1.10.0 =
* WordPress 5.8 compatible.

= 1.9.0 =
* WordPress 5.7 compatible.
* Updated http:// links to use https:// where appropriate.
* Updated copyright.
* Updated Add-Ons.

= 1.8.1 =
* Fixes a PHP Fatal error that can occur in certain configurations when trying to create a new post.

= 1.8.0 =
* WordPress 5.4 compatible.
* Updated plugin tags.
* Updated minimum required WordPress version to 5.0.
* Updated various links.
* Cleaned up code and documentation formatting.
* Added missing code documentation.
* Added missing variable declarations.
* Added missing scopes on methods.
* Improved several code sections for clarity.
* Fixed the "Order by ..." option in the Document Children widget couldn't be changed.
* Added the choice of "Order" to the "Order by ..." option of the Documents widget to allow documents listed as per their established order on the back end.

= 1.7.0 =
* WordPress 5.2 compatible.

= 1.6.1 =
* Fixed missing document categories and tags meta boxes when using the Block editor.
* Added pre-registration of document taxonomies on activation to help WordPress recognize them.
* Minor code improvements.

= 1.6.0 =
* WordPress 5.1 compatible.
* Added support for the WordPress Block editor to edit documents.
* Added an option to choose whether to use the Block editor to edit documents.
* Added an activation hook so that viewing documents does not require to visit Settings > Permalinks first.
* Renamed the file in charge of booting the plugin boot.php to class-documentation-controller.php to reflect the implemented class' name.

= 1.5.1 =
* Added some additional post type labels.
* Customized the post updated messages for the document post type.
* Fixed the output of Documentation_Renderer::list_children() to surround the items with corresponding ul tags.
  This also fixes the output of the [documentation_list_children] shortcode and the Documentation Children widget
  who use this method.